--- a/index.html
+++ b/index.html
@@ -13,18 +13,32 @@
     <meta name="keywords" content="Kenzie" />
 
     <!-- Title Page-->
-    <title>Kenzie JavaScript Page</title>
+    <title>Jeopardy!🎤</title>
 
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
   </head>
 
   <body>
-    <h1>Open the Developer Tools to see the console output.</h1>
-    <h3>
-      Either right click and select "Inspect" or use the shortcut Option + ⌘ + J
-      (on macOS), or Shift + CTRL + J (on Windows/Linux).
-    </h3>
+  
+   <div class="app">
+    <header class="top-header">
+       <h1>Jeopardy</h1>
+       <p class="score">Score <span class="score-count"></span></p>
+    </header>
+
+     <div class="main-div">
+           <h2 class="clue-text"></h2>
+           <form autocomplete="off">
+              <input id="user-answer" type="text" placeholder="Answer Here!" />
+              <button type="submit">Answer</button>
+           </form>
+           <h2 class="correct-answer" style="display: none;"></h2>
+           <button id="play-again" style="display: none">Play Again?</button>
+        </div>
+     </div>
+ </div>
+</div>
     <script src="code.js"></script>
   </body>
 </html>
